--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -98,7 +98,7 @@
 {% endblock content %}
     {% block modal %}
         {% if saved %}
-            {% include "partials/point-created.html" %}}
+            {% include "partials/point-created.html" %}
         {% endif %}
     {% endblock modal %}
     {% block scripts %}
